--- a/src/components/mobileNavbar/mobileNavigation/MobileNavigation.module.css
+++ b/src/components/mobileNavbar/mobileNavigation/MobileNavigation.module.css
@@ -4,6 +4,11 @@
           box-shadow: 0 2rem 4rem rgba(34, 34, 34, 0.1) !important; }
   .solid-white-navbar .mobile-nav__brand-and-toggles a[class*="brand-name"]:link, .solid-white-navbar .mobile-nav__brand-and-toggles a[class*="brand-name"]:visited {
     color: #222222; }
+  .solid-white-navbar .mobile-nav__brand-and-toggles div[class*="user-main"] img {
+    -webkit-filter: invert(12%) sepia(88%) saturate(6890%) hue-rotate(319deg) brightness(70%) contrast(102%);
+            filter: invert(12%) sepia(88%) saturate(6890%) hue-rotate(319deg) brightness(70%) contrast(102%); }
+  .solid-white-navbar .mobile-nav__brand-and-toggles div[class*="user-main"] p {
+    color: #222222; }
 
 .mobile-nav {
   background-color: transparent;
