--- a/src/components/form/Form.module.scss
+++ b/src/components/form/Form.module.scss
@@ -39,7 +39,7 @@
         font-size: 1.5rem;
       }
 
-      p[class*="inputbox-container__error"] {
+      p[class*="error"] {
         color: $white;
       }
 
